--- a/nodbproj-1/src/App.css
+++ b/nodbproj-1/src/App.css
@@ -1,8 +1,18 @@
 * {
-  background-color: rgba(102, 214, 214, 0.253)
+  text-align: center;
 }
 h1 {
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: rgb(16, 16, 119)
+  color: rgb(16, 16, 119);
+  background-color: green;
+}
+.playerCard {
+  display: flex;
+  float: center;
+  margin: 10px;
+  height: 600px;
+  width: 500px;
+  background-color: orange;
+  border: solid 25px rgb(61, 59, 59);
 }
