--- a/nodbproj-v2/src/App.css
+++ b/nodbproj-v2/src/App.css
@@ -13,13 +13,13 @@ h3 {
   justify-content: center;
   
 }
-button {
+/* button {
   color: white;
   background-color: rgb(61, 59, 59);
   width: 100px;
   height: 100px;
   border-radius: 100px;
-}
+} */
 .playerCard {
   text-align: center;
   margin: 10px;
