--- a/nodbproj-v2/src/Components/Buttons/buttons.css
+++ b/nodbproj-v2/src/Components/Buttons/buttons.css
@@ -1,7 +1,9 @@
 button {
+  margin-top: 200px;
     color: white;
+    font-size: 30px;
     background-color: rgb(61, 59, 59);
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
+    width: 200px;
+    height: 200px;
+    border-radius: 200px;
   }
