accept\reject\favelist styling and functions

--- a/nodbproj-v2/src/Components/Buttons/buttons.css
+++ b/nodbproj-v2/src/Components/Buttons/buttons.css
@@ -1,4 +1,4 @@
-button {
+/* button {
   margin-top: 200px;
     color: white;
     font-size: 30px;
@@ -6,4 +6,4 @@ button {
     width: 200px;
     height: 200px;
     border-radius: 200px;
-  }
+  } */
