--- a/nodbproj-v2/src/Components/Buttons/Reject/Reject.css
+++ b/nodbproj-v2/src/Components/Buttons/Reject/Reject.css
@@ -1,9 +1,11 @@
 .reject {
     margin-top: 200px;
+    margin-left: 10px;
       color: white;
-      font-size: 30px;
+      font-size: 20px;
       background-color: rgb(214, 65, 6);
-      width: 200px;
-      height: 100px;
+      width: 100px;
+      height: 200px;
+      border-radius: 50px;
       
     }
