--- a/nodbproj-v2/src/Components/Buttons/Accept/Accept.css
+++ b/nodbproj-v2/src/Components/Buttons/Accept/Accept.css
@@ -1,10 +1,10 @@
 .accept {
-    margin-top: 200px;
-    margin-right: 10px;
+    /* margin-top: 200px;
+    margin-right: 10px; */
       color: white;
       font-size: 20px;
       background-color: rgb(14, 180, 42);
       width: 100px;
       height: 200px;
-      border-radius: 50px;
+      border-radius: 100px;
     }
